--- a/src/server/scripts/World/CMakeLists.txt
+++ b/src/server/scripts/World/CMakeLists.txt
@@ -15,6 +15,11 @@ set(scripts_STAT_SRCS
   World/npc_professions.cpp
   World/npc_taxi.cpp
   World/npcs_special.cpp
+
+
+  World/serverscripts/rewardscript.cpp
+  World/serverscripts/stone.cpp
+  World/serverscripts/televotescript.cpp
 )
 
 message("  -> Prepared: World")
